# GhidraMCP

./: CLAUDE.md  README.md  bridge_mcp_ghidra.py  pyproject.toml
.github/workflows/: build.yml
src/main/java/com/lauriewired/: GhidraMCPPlugin.java
src/main/java/com/lauriewired/handlers/act/: RemoveEnumValues.java
src/main/java/com/lauriewired/handlers/get/: HealthCheck.java  ListInstances.java
src/main/java/com/lauriewired/handlers/search/: SearchBytes.java
src/main/java/com/lauriewired/handlers/set/: RenameData.java  SetGlobalDataType.java
src/main/java/com/lauriewired/util/: GhidraUtils.java
