[project]
name = "ghidra-mcp-bridge"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests>=2,<3",
    "mcp>=1.2.0,<2",
]

[project.scripts]
ghidra-mcp-bridge = "bridge_mcp_ghidra:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["bridge_mcp_ghidra"]
